fix: wip overlay spacing

--- a/src/styles/layout.scss
+++ b/src/styles/layout.scss
@@ -85,7 +85,7 @@ button {
   width: 100vw;
   top: 0;
   left: 0;
-  padding-top: 50px;
+  padding: 50px 0;
   overflow: scroll;
 
   .lottie-player {
